 * Fixed bug in buttons in EPrint Remove.
 * Changed rss mimetpye from text/xml to application/rss+xml
 * Renamed XML export methods to EP3 XML
 * Corrected some calls to hidden_field
 * cgi/users/login no longer tries to set login cookie
 * cgi/users/login now provides link to target docum,ent, rather than
    a redirect.
 * Added some vital code to generate_apacheconf to trip the Auth handlers
    into working.

2006-11-08 cjg
 * Used message style for login and logout errors and messages.

2006-11-08 cjg
 * Added pins above and below results in paginator.
 * Moved status filter to be between controls and results on items
    page.
 * Pagination now defaults to sorting by the first field.
 * Fixed size of search controls when no controls are needed.

2006-11-08 moj
 * Added block_enter.js to stop form submission when pressing enter in
    text inputs, along with a hook in Session's render_input_field.

2006-11-09 tdb
 * Bug fix for LibXML, undef warning on empty TextNode

2006-11-09 cjg
 * pagerange now searches as an integer, on the first value. Nb. not
    indexed!

2006-11-09 moj
 * Re-added Apache::DBI - needed to stop MySQL running out of connections
 * RejectWithEmail and RemoveWithEmail both use mail_body to send email
 * Ditto for mail_view for viewing the email on the page (includes header
    bits)
 * Added javascript toggle to let users enter a reason where it would appear
    in the email.
 * Added action_cancel to RemoveWithEmail
 * Added relevant phrases (mail_[delete_reason,delete_body,delete_body.inbox,
    bounce_reason,bounce_body])

2006-11-09 moj
 * mail_administrator should now work (!) using the EPrints::Email::send_mail
    args.
 * User now uses Email instead of Utils
 * Email now uses mail_body to provide the sig, etc - tweaked Remove/Reject to
    accomodate.
 * Switched links to use <...> after the link text
 * Put <p>s around the reason text
 * Added mail.css
 * Updated the email cfg to use Email